syntax = "proto3";

package com.ecommerce.backend.grpc;

option java_multiple_files = true;
option java_package = "com.ecommerce.backend.grpc";
option java_outer_classname = "UserProto";

service UserEventService {
  rpc CreateUser (CreateUserRequest) returns (UserResponse);
  rpc DeleteUser (DeleteUserRequest) returns (UserResponse);
}

message CreateUserRequest {
  string name = 1;
  string password = 2;
}

message DeleteUserRequest {
  string name = 1;
}

message UserResponse {
  string status = 1;
  string message = 2;
}
